# RL-Account-Migrator

./: .gitignore  CONTRIBUTING.md  README.md  RLAccountMigrator.spec  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: main.yml  realease.yml
assets/icons/: app.icns
src/: gui.py  main.py  util.py
