[tool.poetry]
name = "RLAccountMigrator"
version = "1.0.0"
description = "Manage Rocket League saves and migrate settings between accounts."
authors = ["Maizu Discord: maizu_u"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
PySide6 = "6.10.0"
PySide6_Addons = "6.10.0"
PySide6_Essentials = "6.10.0"
shiboken6 = "6.10.0"
psutil = "7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
