[tool.poetry]
name = "RLAccountMigrator"
version = "1.0.0"
description = "Manage Rocket League saves and migrate settings between accounts."
authors = ["Maizu Discord: maizu_u"]
license = "MIT"
package-mode = false  # <- Das hinzufügen!

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
PySide6 = "^6.10.0"  # <- Nutze ^ statt feste Versionen für Minor Updates
psutil = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pyinstaller = "^6.16"  # <- PyInstaller als Dev-Dependency

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"