[tool.poetry]
name = "RLAccountMigrator"
version = "2.0.0"
description = "Manage Rocket League saves and migrate settings between accounts."
authors = ["Maizu Discord: maizu_u"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
PySide6 = "^6.10.0"
psutil = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pyinstaller = "^6.16"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"